--- a/package.json
+++ b/package.json
@@ -9,9 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.7",
+    "@ant-design/nextjs-registry": "^1.0.0",
+    "antd": "^5.17.2",
+    "chart.js": "^3.3.2",
+    "chartjs-adapter-luxon": "^1.0.0",
+    "chartjs-plugin-streaming": "^2.0.0",
+    "luxon": "^1.27.0",
+    "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.3"
+    "react-chartjs-2": "^4.2.0",
+    "react-dom": "^18"
   },
   "devDependencies": {
     "eslint": "^8",
